--- a/src/pages/setting/userApplication/distribution/distribution.html
+++ b/src/pages/setting/userApplication/distribution/distribution.html
@@ -4,7 +4,7 @@
     <div class="title titleStyle">
       分派
     </div>
-    <button class="button button-clear button-positive" style="font-size: 14px;color: black;">保存</button>
+    <button class="button button-clear button-positive" style="font-size: 14px;color: black;" ng-click="submit()">保存</button>
   </ion-header-bar>
   <ion-content class="content-style" delegate-handle="mainScroll">
     <div class="list">
