--- a/src/pages/setting/userApplication/return/return.html
+++ b/src/pages/setting/userApplication/return/return.html
@@ -4,7 +4,7 @@
     <div class="title titleStyle">
       返回
     </div>
-    <button class="button button-clear button-positive" style="font-size: 14px;color: black;" ng-click="goBack()">保存</button>
+    <button class="button button-clear button-positive" style="font-size: 14px;color: black;" ng-click="submit()">保存</button>
   </ion-header-bar>
   <ion-content class="content-style" delegate-handle="mainScroll">
     <div class="list">
@@ -17,7 +17,6 @@
                  ng-model="data.clientSide">
         <div class="row row-no-padding">
           <div class="col">{{ item.text }}</div>
-          <div class="col">18298182058</div>
         </div>
       </ion-radio>
       <div class="item item-divider">
@@ -25,7 +24,7 @@
       </div>
       <label class="item item-input item-select">
         <div class="input-label">
-          <!--Lightsaber-->&nbsp;
+          请选择
         </div>
         <select ng-model="data.province" ng-change="selectProvince(data.province)">
           <option ng-repeat="item in data.listProvince" value="{{item}}">{{item.name}}</option>
@@ -43,8 +42,7 @@
         返回缘由
       </div>
       <div class="item">
-        <textarea rows="3" cols="20" style="background-color:#eee;padding:5px;width: 100%">
-        在w3school，你可以找到你所需要的所有的网站建设教程。
+        <textarea rows="3" cols="20" style="background-color:#eee;padding:5px;width: 100%" ng-model="data.text">
         </textarea>
       </div>
 
