--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -19,7 +19,7 @@
         <div class="eye-close" ng-class="{'eye-open':config.eyeOpenFlag}" ng-click="eyeOpen()"></div>
       </div>
     </div>
-    <button class="login-btn" type="button" ng-click="login()">登录</button>
+    <button class="login-btn" type="button" ng-click="login()">登录 测试版本1.3.0</button>
     <!--<a href="javascript:void(0)" class="forget-password">忘记密码</a>-->
 
 
