--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -9,6 +9,11 @@
        ng-click="goMessage()"></i>
   </ion-header-bar>
   <ion-content class="content-style" delegate-handle="mainScroll">
+    <!-- 1.添加下拉刷新的组件 -->
+    <ion-refresher
+      pulling-text="下拉刷新页面数据..."
+      on-refresh="doRefresh()">
+    </ion-refresher>
     <div class="global-container">
       <ion-list>
         <ion-item class="item item-icon-right" style="border-top: 0px">
@@ -46,7 +51,7 @@
           修改密码<i class="icon ion-ios-arrow-right"></i>
         </ion-item>
         <ion-item class="text-left item item-icon-right bigTitle" ng-click="versionDetection()">
-          版本检测 (1.2.3)
+          版本检测
         </ion-item>
         <ion-item class="text-left item item-icon-right bigTitle" ng-click="exitAccount()">
           退出登录
