--- a/src/pages/setting/userApplication/userApplicationList.html
+++ b/src/pages/setting/userApplication/userApplicationList.html
@@ -43,7 +43,7 @@
       <ion-item ng-repeat="item in data.messageList">
         <div class="row row-no-padding rowHeight">
           <div class="col-20 longStyle">{{item.name}}</div>
-          <div class="col-60 numFontFamily font-little-small ">{{item.apply_time}}</div>
+          <div class="col-60 numFontFamily font-little-small "><i class="ion-ios-stopwatch-outline redFont" ng-if="item.over_time == 1">&nbsp;超时&nbsp;</i>{{item.apply_time}}</div>
           <div class="col-20">
             <button class="button button-small button-outline button-positive" ng-click="telphone(item)">
               拨打电话
@@ -51,38 +51,38 @@
           </div>
         </div>
         <div class="row row-no-padding rowHeight">
-          <div class="col-20 font-medium-small longStyle">{{item.real_province_city}}</div>
-          <div class="col-60 font-little-small longStyle">{{item.school_name}}</div>
+          <div class="col-25 font-medium-small longStyle">{{item.real_province_city}}</div>
+          <div class="col-55 font-little-small longStyle">{{item.school_name}}</div>
           <div class="col-20 font-medium-small longStyle text-right">
               {{item.apply_type}}
           </div>
         </div>
         <div class="row row-no-padding rowHeight">
           <div class="col-70 font-medium-small">当前处理人：{{item.direct_manager1}}</div>
-          <div class="col-30 font-medium-small text-right">{{item.status_name}}</div>
+          <div class="col-30 font-medium-small text-right" ng-class="{redFont : item.status == 3}">{{item.status_name}}</div>
         </div>
         <div class="row row-no-padding rowHeight">
           <div class="col-20 paddingCol">
             <button class="button button-small button-outline button-positive button-block" ng-click='goOperation(1,item)'
-                    ng-disabled="item.status == 1 || item.status == 2 || item.status == 5 || item.status == 0">
+                    ng-disabled="item.status == 1 || item.status == 2 || item.status == 5 || item.status == 0 || item.auth == 0">
               分派
             </button>
           </div>
           <div class="col-20 paddingCol">
             <button class="button button-small button-outline button-positive button-block"  ng-click='goOperation(2,item)'
-                    ng-disabled="item.status == 1 || item.status == 2 || item.status == 5 || item.status == 0">
+                    ng-disabled="item.status == 1 || item.status == 2 || item.status == 5 || item.status == 0 || item.auth == 0">
               调换
             </button>
           </div>
           <div class="col-20 paddingCol">
             <button class="button button-small button-outline button-positive button-block" ng-click='goOperation(3,item)'
-                    ng-disabled="item.status == 1 || item.status == 2 || item.status == 5 || item.status == 0">
+                    ng-disabled="item.status == 1 || item.status == 2  || item.status == 0">
               跟进
             </button>
           </div>
           <div class="col-20 paddingCol">
             <button class="button button-small button-outline button-positive button-block" ng-click='goOperation(5,item)'
-                    ng-disabled="item.status == 1 || item.status == 2 || item.status == 5 || item.status == 0">
+                    ng-disabled="item.status == 1 || item.status == 2 || item.status == 5 || item.status == 0 || item.auth == 0">
               返回
             </button>
           </div>
