--- a/src/pages/setting/userApplication/exchange/exchange.html
+++ b/src/pages/setting/userApplication/exchange/exchange.html
@@ -56,7 +56,7 @@
         <textarea rows="3" cols="20" style="background-color:#eee;padding:5px;width: 100%" placeholder="最多输入300个汉字" ng-model="data.exchang_reason"></textarea>
       </div>
       <div class="styleTips">
-        温馨提示：只能调换给管辖实际归属地区域的人
+        温馨提示：只有区域负责人可以进行调换，只能调换给区域负责人。
       </div>
     </div>
 
