--- a/src/pages/setting/userApplication/follow/follow.html
+++ b/src/pages/setting/userApplication/follow/follow.html
@@ -16,11 +16,11 @@
       </button>
     </div>
   </div>
-  <ion-content class="content-style" delegate-handle="mainScroll">
-    <div class="button-bar">
-      <a class="button">跟进成功</a>
-      <a class="button">跟进失败</a>
-    </div>
+  <ion-content class="content-style" delegate-handle="mainScroll" style="margin-top: 44px">
+    <!--<div class="button-bar">-->
+      <!--<a class="button"></a>-->
+      <!--<a class="button"></a>-->
+    <!--</div>-->
     <div ng-if="config.flag == 'ios'">
       <div class="item item-divider">
         获知晓黑板的渠道
@@ -48,6 +48,8 @@
       <div class="item">
         <textarea rows="3" cols="20" style="background-color:#eee;padding:5px;width: 100%" placeholder="最多输入300个汉字" ng-model="data.successText">
         </textarea>
+      </div>
+      <div class="item">
       </div>
     </div>
     <div ng-if="config.flag == 'ionic'">
@@ -77,6 +79,8 @@
       <div class="item">
         <textarea rows="3" cols="20" style="background-color:#eee;padding:5px;width: 100%" placeholder="最多输入300个汉字" ng-model="data.errorText">
         </textarea>
+      </div>
+      <div class="item">
       </div>
     </div>
   </ion-content>
