--- a/src/pages/setting/userApplication/userApplicationList.html
+++ b/src/pages/setting/userApplication/userApplicationList.html
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="row row-no-padding rowHeight">
-          <div class="col-60 font-medium-small">当前处理人：{{item.direct_manager1}}</div>
+          <div class="col-60 font-medium-small longStyle">当前处理人：{{item.direct_manager1}}</div>
           <div class="col-20 font-medium-small">id：{{item.t_a_id}}</div>
           <div class="col-20 font-medium-small text-right" ng-class="{redFont : item.color == 1}">{{item.status_name}}</div>
         </div>
@@ -78,7 +78,11 @@
           </div>
           <div class="col-20 paddingCol">
             <button class="button button-small button-outline button-positive button-block" ng-click='goOperation(3,item)'
-                    ng-disabled="item.status == 1 || item.status == 2  || item.status == 0 || item.auth == 0">
+                    ng-disabled="item.status == 1 || item.status == 2  || item.status == 0 || item.auth == 0" ng-if="item.status != 5">
+              跟进
+            </button>
+            <button class="button button-small button-outline button-positive button-block" ng-click='goOperation(3,item)'
+                    ng-if="item.status == 5">
               跟进
             </button>
           </div>
